deployment/kubernetes/ui-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: incident-reporting
    release: v1
  name: incident-reporting-ui
spec:
  progressDeadlineSeconds: 60
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: incident-reporting-ui
      release: v1
  template:
    metadata:
      labels:
        app: incident-reporting-ui
        release: v1
    spec:
      imagePullSecrets:
        - name: incident-reporting-registry-creds
      containers:
      - image: harbor.ir.butterhead.net:443/incident-reporting/incident-reporting-ui:latest
        name: incident-reporting-ui
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 128M
        #   requests:
        #     cpu: 100m
        #     memory: 32M
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #     httpHeaders:
        #     - name: Custom-Header
        #       value: Awesome
        #   initialDelaySeconds: 5
        #   periodSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 5
        #   periodSeconds: 3
      restartPolicy: Always
